backend/infra/k8s/artist-store-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-vue-auth-example-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-vue-auth-example
  template:
    metadata:
      labels:
        app: go-vue-auth-example
    spec:
      containers:
        - name: go-vue-auth-example
          image: sbchaes/go-vue-auth-example
---
apiVersion: v1
kind: Service
metadata:
  name: go-vue-auth-example-srv
spec:
  selector:
    app: go-vue-auth-example
  ports:
    - name: go-vue-auth-example
      protocol: TCP
      port: 8080
      targetPort: 8080
